log
Thu 04 May 2023 01:23:30 AM UTC: 
 tests:  0|5
total_score: 0/70
0ebf4fb
Thu 04 May 2023 01:29:44 AM UTC: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:19: error: unused variable ‘nodito’ [-Werror=unused-variable]
   61 |             Node* nodito = createNode();
      |                   ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
9a65407
Thu 04 May 2023 01:36:03 AM UTC: 
 sudoku.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
5d12cf2
Thu 04 May 2023 01:36:18 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:69:10: error: ‘j’ undeclared (first use in this function)
   69 |       if(j!=9) break;
      |          ^
sudoku.c:69:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d185245
Thu 04 May 2023 01:37:41 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:70:10: error: ‘j’ undeclared (first use in this function)
   70 |       if(j !=9) break;
      |          ^
sudoku.c:70:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
9995160
Thu 04 May 2023 01:41:40 AM UTC: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
279015f
Thu 04 May 2023 01:42:08 AM UTC: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
1661bc5
Thu 04 May 2023 01:49:02 AM UTC: 
 sudoku.c | 42 +++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 41 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
afc1379
Thu 04 May 2023 01:52:47 AM UTC: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  2|4
total_score: 15/70
997b704
Thu 04 May 2023 01:52:55 AM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
e671e4c
